"Fix" the print logic for the resume

--- a/astro/src/layouts/Layout.astro
+++ b/astro/src/layouts/Layout.astro
@@ -1,6 +1,6 @@
 ---
 import { SEO } from 'astro-seo'
-import markdownToTxt from 'markdown-to-txt'
+import { markdownToTxt } from 'markdown-to-txt'
 import { CollectionEntry, getEntryBySlug } from 'astro:content'
 import Header from '../components/Header.astro'
 import Footer from '../components/Footer.astro'
