--- a/astro/src/components/Footer.astro
+++ b/astro/src/components/Footer.astro
@@ -72,7 +72,7 @@ const social = [
     'print:hidden',
   ]}
 >
-  <div class="container mx-auto flex flex-col">
+  <div class="container mx-auto flex flex-col gap-y-4">
     <div class:list={['w-full', '[&_a]:link-primary', 'font-serif']}>
       <h4 class="footer-title">About</h4>
       <Content />
