--- a/astro/src/components/DaylioEntry.astro
+++ b/astro/src/components/DaylioEntry.astro
@@ -1,5 +1,5 @@
 ---
-import { DaylioEntry } from '../lib/daylio'
+import type { DaylioEntry } from '../lib/daylio'
 import { ActivityMapping } from '../lib/enums'
 
 interface Props {
