--- a/astro/src/components/JobSearchSankeyChart/index.astro
+++ b/astro/src/components/JobSearchSankeyChart/index.astro
@@ -1,7 +1,7 @@
 ---
 import { jobSearchDataToSankeyPoints } from '../../lib/jobSearchSankey'
 import jobSearch2022 from './2022.json'
-import Chart from './Chart.tsx'
+import Chart from './Chart'
 
 interface Props {
   year: number
