--- a/astro/src/components/Post/components.astro
+++ b/astro/src/components/Post/components.astro
@@ -1,4 +1,5 @@
 ---
+// @ts-ignore
 import { Tweet } from '@astro-community/astro-embed-twitter'
 import DemoVideo from './DemoVideo.astro'
 import GithubFile from './GithubFile.astro'
@@ -14,6 +15,6 @@ export const components = {
   StreamingAlbum,
   Tweet,
   img: Image,
-  code: Code,
+  pre: Code,
 }
 ---
