--- a/astro/src/layouts/Post.astro
+++ b/astro/src/layouts/Post.astro
@@ -1,5 +1,5 @@
 ---
-import { CollectionEntry } from 'astro:content'
+import type { CollectionEntry } from 'astro:content'
 import dateFns from 'date-fns'
 import BaseLayout from './Layout.astro'
 import EmojiText from '../components/EmojiText.astro'
