--- a/astro/src/components/FancyBackground/index.astro
+++ b/astro/src/components/FancyBackground/index.astro
@@ -69,7 +69,7 @@ const { points = 30 } = Astro.props
   window?.CSS?.paintWorklet?.addModule?.(fluidBackgroundWorkletURL)
 
   document.addEventListener('DOMContentLoaded', () => {
-    const canvases = document.querySelectorAll('.fancy-bg')
+    const canvases = document.querySelectorAll<HTMLDivElement>('.fancy-bg')
     const updateBg = () =>
       canvases.forEach((canvas) => {
         canvas?.style?.setProperty?.(
