SEO & Style Tweaks (#262)
* Move the footer about to a markdown file

* About section now powers meta description

Parallelize data fetching on home page and layout

* Add a bunch of SEO tweaks

* Add badges to the posts on the home page

Also show the latest post.

* Move the coding section to markdown

* "Fix" the print logic for the resume

* Fix Github actions

* More CI fixes

* GH actions never stops being fun

* Update code component to be beautiful

- Fix all warnings from astro check
- Remove type checking job

* Smol copy change

* Linting fixes

* Update dependabot

* Get code expansion working 💯

--- a/astro/src/components/DaylioEntry.astro
+++ b/astro/src/components/DaylioEntry.astro
@@ -1,5 +1,5 @@
 ---
-import { DaylioEntry } from '../lib/daylio'
+import type { DaylioEntry } from '../lib/daylio'
 import { ActivityMapping } from '../lib/enums'
 
 interface Props {
@@ -70,7 +70,7 @@ const { entry, wrapInPaper = false } = Astro.props
       </div>
     </div>
     {
-      entry.notes && entry.notes.length > 0 && (
+      entry.notes && entry.notes.length > 1 && (
         <ul class="my-0">
           {entry.notes.map((n) => (
             <li>{n}</li>
@@ -78,5 +78,6 @@ const { entry, wrapInPaper = false } = Astro.props
         </ul>
       )
     }
+    {entry.notes && entry.notes.length === 1 && <p>{entry.notes[0]}</p>}
   </div>
 </article>
