--- a/astro/src/components/Footer.astro
+++ b/astro/src/components/Footer.astro
@@ -1,10 +1,13 @@
 ---
-import EmojiText from '../components/EmojiText.astro'
+import { getEntryBySlug } from 'astro:content'
 import { FaGithubAlt, FaMastodon } from 'react-icons/fa'
 import { ImLastfm } from 'react-icons/im'
 import { MdRssFeed, MdOutlineEmail } from 'react-icons/md'
 import { TbBrandTwitter } from 'react-icons/tb'
 import { TiSocialLinkedin } from 'react-icons/ti'
+
+const about = await getEntryBySlug('sections', 'about')
+const { Content } = await about.render()
 
 const social = [
   {
@@ -46,6 +49,7 @@ const social = [
     name: 'email',
     label: 'Shoot me an email',
     url: 'mailto:eligundry@gmail.com',
+    itemProp: 'email',
     Icon: MdOutlineEmail,
   },
   {
@@ -68,38 +72,10 @@ const social = [
     'print:hidden',
   ]}
 >
-  <div class="container mx-auto flex flex-col">
-    <div class="w-full">
+  <div class="container mx-auto flex flex-col gap-y-4">
+    <div class:list={['w-full', '[&_a]:link-primary', 'font-serif']}>
       <h4 class="footer-title">About</h4>
-      <p class="[&_a]:link-primary font-serif">
-        Eli Gundry is a full stack web developer that loves JavaScript, devops
-        and web standards. When he isn't coding, he's{' '}
-        <a href="/blog#cooking">
-          <EmojiText emoji="👨‍🍳" label="chef cause I'm cooking">
-            cooking up something mean in the kitchen,
-          </EmojiText>
-        </a>{' '}
-        <EmojiText
-          emoji="🎾"
-          label="tennis ball because that's what I'm playing"
-        >
-          playing tennis
-        </EmojiText>{' '}
-        or{' '}
-        <EmojiText emoji="🐈🐈‍⬛" label="it's my cats!">
-          annoying his cats.
-        </EmojiText>
-        He is also a{' '}
-        <a href="/web0.html">
-          <EmojiText
-            emoji="✳️"
-            label="green asterisk emoji for that pure html energy"
-          >
-            web0 evangelist
-          </EmojiText>
-        </a>{' '}
-        and thinks everyone can benefit from writing some HTML.
-      </p>
+      <Content />
     </div>
     <div class="w-full">
       <h4 class="footer-title">Social</h4>
@@ -122,6 +98,7 @@ const social = [
               data-tip={link.label}
               aria-label={link.label}
               class:list={['btn', 'btn-sm', 'btn-square', 'btn-primary']}
+              itemprop={link.itemProp}
             >
               <link.Icon size="1.75rem" />
             </a>
