Make Github section a lot nicer

--- a/astro/src/components/Post/Image.astro
+++ b/astro/src/components/Post/Image.astro
@@ -25,5 +25,5 @@ const height = Math.round(width / aspectRatio)
   aspectRatio={aspectRatio}
   format="webp"
   style={{ backgroundColor }}
-  class:list={['max-w-100']}
+  class:list={['max-w-100', 'mx-auto']}
 />
