--- a/astro/src/pages/index.astro
+++ b/astro/src/pages/index.astro
@@ -267,7 +267,7 @@ const [
       me albums that Spotify's algorithims would never dare show me. It's the
       first application I have built that I use daily!
     </p>
-    <div class="flex flex-col sm:flex-row sm:gap-4">
+    <div class="flex flex-col sm:flex-row gap-y-4 sm:gap-4">
       <div class="sm:items-stretch flex flex-col">
         <h3 class="mt-0">Seasonal Playlist</h3>
         <iframe
