--- a/astro/src/components/Resume/Section.astro
+++ b/astro/src/components/Resume/Section.astro
@@ -1,12 +1,23 @@
 ---
 interface Props {
   title?: any
+  className?: string
 }
 
-const { title } = Astro.props
+const { title, className } = Astro.props
 ---
 
-<section class:list={['prose', 'flex', 'flex-col', 'gap-2']}>
+<section
+  class:list={[
+    'prose',
+    'flex',
+    'flex-col',
+    'gap-2',
+    ['[&>ul]:order-5', '[&>p]:order-5'],
+    ['[&>ul]:my-2', '[&>p]:my-2'],
+    className,
+  ]}
+>
   {
     title && (
       <header>
