--- a/astro/src/components/Resume/Section.astro
+++ b/astro/src/components/Resume/Section.astro
@@ -1,12 +1,13 @@
 ---
 interface Props {
   title?: any
+  className?: string
 }
 
-const { title } = Astro.props
+const { title, className } = Astro.props
 ---
 
-<section class:list={['prose', 'flex', 'flex-col', 'gap-2']}>
+<section class:list={['prose', 'flex', 'flex-col', 'gap-2', className]}>
   {
     title && (
       <header>
