Uploading and reading the csv upload all works in Astro!

--- a/astro/src/components/DaylioEntry.astro
+++ b/astro/src/components/DaylioEntry.astro
@@ -13,7 +13,7 @@ const { entry, wrapInPaper = false } = Astro.props
 <article
   itemscope
   itemtype="https://schema.org/BlogPosting"
-  id={entry.rawTime}
+  id={entry.time.toISOString()}
   class:list={[
     'prose',
     wrapInPaper && 'paper',
@@ -34,9 +34,12 @@ const { entry, wrapInPaper = false } = Astro.props
         <h3 itemprop="name headline" class="m-0">
           I felt {entry.mood}
         </h3>
-        <time datetime={entry.rawTime} itemprop="datePublished dateModified">
-          <a href={`/feelings/#${entry.rawTime}`}>
-            {entry.rawTime}
+        <time
+          datetime={entry.time.toISOString()}
+          itemprop="datePublished dateModified"
+        >
+          <a href={`/feelings/#${entry.time.toISOString()}`}>
+            {entry.time.toISOString()}
           </a>
         </time>
         <div
